# PokemonBattleCompass

./: .gitignore  PokemonBattleCompass.spec  README.md  app.py  app_diagnostics.py  apptest.py  changelog.md  flet_app.py  flet_test.py  pyproject.toml  requirements.txt  shared_preferences.backup.json
.streamlit/: config.toml
Archive-Backup/: calculations.py  mechanics.py  notes.py
data/: abilities_swsh.json  ability_descriptions_swsh.json  ability_rules.json  about_content.py  evolutions.json  item_validation_swsh.json  items.json  moves.json  opponents.before_starter_variants.json  opponents.json  pokemon_validation_swsh.json  team_data.json  type_chart.json  types.json
docs/: dev commands.md  dev instructions.txt  opponent_texture_shopping_list.md  parking_lot.md  ud_snippets.md
engine/: calculations.py  data_loader.py  item_recommendations.py  mechanics.py  moves.py  notes.py
tests/: battle_compass_vm_smoke.py  flet_test.py
tools/: add_starter_variants.py  build_pokemon_validation_swsh.py  extract_pokemon_sprites.py  extract_type_badges.py  import_workbook.py  make_icon.py  normalize_texture_artwork.py
ui/: battle_snapshot.py  cards.py  constants.py  rendering.py  styles.py  team.py  theme.py
ui/components/: about_card.py  app_shell.py  battle_snapshot.py  full_analysis.py  journey_ready.py  opponent_card.py  other_strong_options.py  recommendation_card.py  reference_dialogs.py  starter_details.py  starter_selection.py
ui/storage/: journey_storage.py
ui/viewmodels/: app_state.py  battle_compass_vm.py
workbook/: Pokemon Battle Compass v1.2.xlsx
(+4 files in other folders)
